# SkillXchange

./: .gitignore  README.md
BackendFlask/: .env.sample  app.py  pyproject.toml
BackendFlask/application/: config.py  init_db.py  models.py
FrontendReact/: .env.sample  index.html  package-lock.json  package.json  pnpm-lock.yaml
FrontendReact/src/: App.tsx
FrontendReact/src/components/auth/: auth-form.tsx
FrontendReact/src/components/availability/: availability-selector.tsx
FrontendReact/src/components/layout/: layout.tsx  navbar.tsx
FrontendReact/src/components/skills/: skill-card.tsx  skill-form.tsx
FrontendReact/src/components/swaps/: swap-request-card.tsx  swap-request-modal.tsx
FrontendReact/src/components/ui/: star-rating.tsx
FrontendReact/src/components/user/: profile-feedback.tsx
FrontendReact/src/lib/: store.ts  toast.ts
FrontendReact/src/pages/: Browse.tsx  Index.tsx  Profile.tsx  Swaps.tsx  UserProfile.tsx  login.tsx
FrontendReact/src/types/: index.ts
