[project]
name = "skillxchange"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "amqp==5.3.1",
    "aniso8601==10.0.0",
    "billiard==4.2.1",
    "blinker==1.9.0",
    "cachelib==0.13.0",
    "celery==5.4.0",
    "click==8.1.8",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "flask==3.1.0",
    "flask-caching==2.3.1",
    "flask-cors==5.0.1",
    "flask-jwt-extended==4.7.1",
    "flask-migrate>=4.1.0",
    "flask-restful==0.3.10",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.1.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "kombu==5.4.2",
    "markupsafe==3.0.2",
    "prompt-toolkit==3.0.50",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "redis==5.2.1",
    "six==1.17.0",
    "sqlalchemy==2.0.39",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
]
